# 2A202600890_PhanQuocAnh_Day09

./: .env.example  .gitignore  Lab_solution.md  README.md  pyproject.toml  start_all.ps1  stop_all.ps1  test_client.py
Lab_Assigment/: README.md  start_all.ps1
agent_day08/: start_all.ps1  start_all.sh  stop_all.ps1  test_client.py
agent_day08/common/: a2a_client.py
agent_day08/day08_customer_agent/: __main__.py  agent_executor.py
agent_day08/day08_legal_rag_agent/: __main__.py  agent_executor.py  service.py
agent_day08/day08_news_rag_agent/: __main__.py  agent_executor.py  service.py
agent_day08/day08_orchestrator_agent/: __main__.py  agent_executor.py  graph.py
agent_day08/day08_ui/: __main__.py  app.py
agent_day08/rag/: retrieval.py  synthesis.py  tools.py
agent_day08/tests/: test_day08_pipeline.py
common/: llm.py  registry_client.py
compliance_agent/: __main__.py
customer_agent/: __main__.py
exercises/: exercise_2_tools.py  exercise_4_multiagent.py  test_bonus.py
law_agent/: __main__.py
registry/: __main__.py
stages/stage_3_single_agent/: main.py
tax_agent/: __main__.py
