[project]
name = "legal-multiagent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.0,<1.0",
    "langgraph>=0.4.1",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.1.0",
    "pydantic>=2.11.0",
    "python-pptx>=1.0.2",
    "cairosvg>=2.9.0",
    "numpy>=2.3.0",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "registry",
    "common",
    "customer_agent",
    "law_agent",
    "tax_agent",
    "compliance_agent",
    "stages",
    "agent_day08",
]
